# FlexSpotBridge

./: .gitignore  FlexSpotBridge.icns  FlexSpotBridge.py  README.md  convert_icon.py  pyproject.toml  setup.py  version.py
.claude/: settings.json
.github/workflows/: release.yml  version-consistency.yml
