[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flexspotbridge"
version = "1.1.0b3"
description = "FlexRadio panadapter spot bridge for MacLoggerDX"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Bill Cody" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Ham Radio",
  "Topic :: Desktop Environment"
]
keywords = ["hamradio", "flexradio", "macloggerdx", "spots"]

[project.urls]
Homepage = "https://github.com/williamscody/FlexSpotBridge"
Repository = "https://github.com/williamscody/FlexSpotBridge"
Issues = "https://github.com/williamscody/FlexSpotBridge/issues"

[tool.flit.module]
name = "FlexSpotBridge"
